app calidad final version

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,6 @@
 {% block body %}
   <h1> Evaluemos Triángulos y Cuadriláteros  !</h1>
   <h2>Que deseas hacer ?</h2>
-     <a href="addTriangulo">Evaluar Triángulo</a><br>
-     <a href="addCuadrilatero">Evaluar Cuadrilátero</a>
+     <a href="/addTriangulo">Evaluar Triángulo</a><br>
+     <a href="/addCuadrilatero">Evaluar Cuadrilátero</a>
 {% endblock %}
